--- a/authentication/src/main/resources/application.properties
+++ b/authentication/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=authentication-service-zull
 server.port=8762
+spring.application.name=authentication-service-zull
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 gg.app.jwtSecret=gregorio666
 gg.app.jwtExpiration=86400
@@ -28,6 +28,10 @@ zuul.ignored-services=*
 zuul.routes.hello-service.path=/hello/**
 zuul.routes.hello-service.service-id=HELLO-SERVICE
 
+# Map paths to services
+zuul.routes.gallery-service.path=/gallery/**
+zuul.routes.gallery-service.service-id=gallery-service
+
 # Map path to auth service
 #zuul.routes.auth-service.path=/api/auth/**
 #zuul.routes.auth-service.service-id=AUTH-SERVICE
@@ -40,3 +44,6 @@ zuul.routes.auth-service.strip-prefix=false
 
 # Exclude authorization from sensitive headers
 zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie 
+
+
+
