--- a/authentication/src/main/resources/application.properties
+++ b/authentication/src/main/resources/application.properties
@@ -4,11 +4,13 @@ eureka.client.service-url.default-zone=http://localhost:8761/eureka
 gg.app.jwtSecret=gregorio666
 gg.app.jwtExpiration=86400
 #postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/testdb
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.url= jdbc:postgresql://localhost:5432/testdb 
+spring.datasource.username=quenar
+spring.datasource.password=dupa
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
 #zuul:
 # A prefix that can added to beginning of all requests.
 #zuul.prefix=/api
@@ -26,6 +28,10 @@ zuul.routes.gallery-service.service-id=gallery-service
 
 zuul.routes.content-service.path=/content/**
 zuul.routes.content-service.service-id=content-service
+
+zuul.routes.reviewsService.path=/**
+zuul.routes.reviewsService.service-id=reviewsService
+
 
 # Map path to auth service
 #zuul.routes.auth-service.path=/api/auth/**
